# decentralized-lottery

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
.cursor/rules/: aiguidelines-rule.mdc  development-rule.mdc  lottery-system-rule.mdc  research-rule.mdc  rules-management-rule.mdc
docs/: action-items.md  lottery-system.md
programs/decentralized-lottery/: Cargo.toml
programs/decentralized-lottery/src/: errors.rs  events.rs  lib.rs  utils.rs
programs/decentralized-lottery/src/instructions/: buy_ticket.rs  cancel_lottery.rs  create_lottery.rs  mod.rs  transition_state.rs
programs/decentralized-lottery/src/state/: lottery.rs  mod.rs  treasury.rs
scripts/: build.sh  update-config.ts  update-idl.ts
tests/: decentralized-lottery.ts
