[package]
name = "decentralized-lottery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "decentralized_lottery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-log-data = []
anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-derive-space = "0.30.1"
spl-token = { version = "=4.0.3", features = ["no-entrypoint"] }
thiserror = "1.0"
num-derive = "0.4.2"
solana-program = "=1.18.26"




